--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ deepspeed
 cpm-kernels
 bitsandbytes>=0.39
 accelerate>=0.20
-# aigc-zoo>=0.1.11,<=0.1.12
-git+https://github.com/ssbuild/aigc_zoo#egg=aigc_zoo
+
+git+https://github.com/ssbuild/deep_training#egg=deep_training
